<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2013-2016 Amazon.com,
  ~ Inc. or its affiliates. All Rights Reserved.
  ~
  ~ Licensed under the Amazon Software License (the "License").
  ~ You may not use this file except in compliance with the
  ~ License. A copy of the License is located at
  ~
  ~     http://aws.amazon.com/asl/
  ~
  ~ or in the "license" file accompanying this file. This file is
  ~ distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
  ~ CONDITIONS OF ANY KIND, express or implied. See the License
  ~ for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Add the ActionBar -->

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:textAlignment="center"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <TextView
                    android:id="@+id/main_toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:text="@string/Menu"
                    android:textAlignment="center"
                    android:textColor="@color/toolbar_items"
                    android:textSize="@dimen/action_bar_text" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/activity_main_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.constraint.ConstraintLayout>
        <!-- Set the Main content -->

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/create_table_bttn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/step1" />

            <Button
                android:id="@+id/insert_users_bttn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/step2" />

            <Button
                android:id="@+id/list_users_bttn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/step3" />

            <Button
                android:id="@+id/delete_table_bttn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/step4" />
        </LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_input_add" />

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/toolbar_items"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_user"
        app:menu="@menu/activity_user_drawer" />

</android.support.v4.widget.DrawerLayout>
