<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2013-2016 Amazon.com,
  ~ Inc. or its affiliates. All Rights Reserved.
  ~
  ~ Licensed under the Amazon Software License (the "License").
  ~ You may not use this file except in compliance with the
  ~ License. A copy of the License is located at
  ~
  ~     http://aws.amazon.com/asl/
  ~
  ~ or in the "license" file accompanying this file. This file is
  ~ distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
  ~ CONDITIONS OF ANY KIND, express or implied. See the License
  ~ for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.iot.letthingsspeak.aws.AboutApp">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_AboutApp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/about_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="@string/Menu"
                android:textAlignment="center"
                android:textColor="@color/toolbar_items"
                android:textSize="@dimen/action_bar_text" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            tools:context="com.iot.letthingsspeak.aws.AboutApp"
            tools:showIn="@layout/activity_about_app">


            <TextView
                android:id="@+id/textViewAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:autoLink="all"
                android:text="@string/about" />

            <Space
                android:id="@+id/space_about_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_inter_group_separation"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textViewAbout" />

            <TextView
                android:id="@+id/textViewMoreInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/space_about_1"
                android:autoLink="all"
                android:text="@string/more_info" />

            <Space
                android:id="@+id/space_about_2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_inter_group_separation"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textViewMoreInfo" />

            <Space
                android:id="@+id/space_about_3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_inter_group_separation"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/space_about_2" />

            <Button
                android:id="@+id/aboutBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/space_about_3"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_selector"
                android:text="Back"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_button_text_size" />
        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
