<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context="com.iot.letthingsspeak.aws.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:textAlignment="center"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:id="@+id/main_toolbar_title"
                android:text="@string/Menu"
                android:textColor="@color/toolbar_items"
                android:textSize="@dimen/action_bar_text" />
        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

        <!-- Set the Main content -->
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            tools:context="com.iot.letthingsspeak.aws.MainActivity">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:id="@+id/imageViewAppMainCognitoIcon"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/cognito"
                android:scaleType="fitXY"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_inter_group_separation"
                android:layout_below="@+id/imageViewAppMainCognitoIcon"
                android:layout_centerHorizontal="true"
                android:id="@+id/space_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_main_screen_title"
                android:textSize="30sp"
                android:id="@+id/textViewAppMainTitle"
                android:layout_below="@+id/space_1"
                android:layout_centerHorizontal="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_inter_group_separation"
                android:id="@+id/space"
                android:layout_below="@+id/textViewAppMainTitle"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/app_main_desc"
                android:id="@+id/textView"
                android:layout_below="@+id/space"
                android:layout_centerHorizontal="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_inter_group_separation"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:id="@+id/space2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/activity_text_size_small"
                android:text=" "
                android:id="@+id/textViewUserIdLabel"
                android:layout_below="@+id/space2"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_text_height"
                android:paddingLeft="@dimen/activity_text_padding"
                android:paddingRight="@dimen/activity_text_padding"
                android:id="@+id/editTextUserId"
                android:layout_below="@+id/textViewUserIdLabel"
                android:layout_centerHorizontal="true"
                android:background="@drawable/text_border_selector"
                android:hint="Username"
                android:inputType="textPersonName"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/activity_text_padding"
                android:text=" "
                android:textColor="@color/alert"
                android:id="@+id/textViewUserIdMessage"
                android:layout_below="@+id/editTextUserId"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" "
                android:textSize="@dimen/activity_text_size_small"
                android:id="@+id/textViewUserPasswordLabel"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/textViewUserIdMessage" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_text_height"
                android:paddingLeft="@dimen/activity_text_padding"
                android:paddingRight="@dimen/activity_text_padding"
                android:id="@+id/editTextUserPassword"
                android:layout_below="@+id/textViewUserPasswordLabel"
                android:layout_centerHorizontal="true"
                android:background="@drawable/text_border_selector"
                android:hint="Password"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="@dimen/activity_text_padding"
                android:text=" "
                android:textColor="@color/alert"
                android:id="@+id/textViewUserPasswordMessage"
                android:layout_below="@+id/editTextUserPassword"
                android:layout_centerHorizontal="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_intra_group_separation"
                android:layout_below="@+id/textViewUserPasswordMessage"
                android:layout_centerHorizontal="true"
                android:id="@+id/space4" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_button_text_size"
                android:id="@+id/buttonLogIn"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/space4"
                android:background="@drawable/button_selector"
                android:onClick="logIn"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_intra_group_separation"
                android:layout_below="@+id/buttonLogIn"
                android:layout_centerHorizontal="true"
                android:id="@+id/space5" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_intra_group_separation"
                android:layout_below="@+id/space5"
                android:layout_centerHorizontal="true"
                android:id="@+id/space6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Forgot password"
                android:textColor="@color/button_default"
                android:textSize="15sp"
                android:id="@+id/textViewUserForgotPassword"
                android:clickable="true"
                android:focusable="true"
                android:layout_below="@+id/space6"
                android:layout_alignParentEnd="true"
                android:onClick="forgotPassword"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Sign up"
                android:textColor="@color/button_default"
                android:textSize="15sp"
                android:id="@+id/textViewUserSignUp"
                android:clickable="true"
                android:focusable="true"
                android:layout_below="@+id/space6"
                android:layout_alignParentStart="true"
                android:onClick="signUp"/>

        </RelativeLayout>

</ScrollView>

</android.support.design.widget.CoordinatorLayout>
